--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href=".css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
 </head>
 <body>
     <header>
-    <img src="./image/image1.png" alt="logo">
-    <span class="material-symbols-outlined">
-        menu
-        </span>
         <nav>
+            <img src="./image/image1.png" alt="logo">
+            <span class="material-symbols-outlined">
+                menu
+            </span>
             <ul>
                <a href=""><li>HOME</li></a>
                <a href=""> <li>BLOG</li></a>
@@ -50,7 +50,7 @@
         <section class="chapter3">
             <div class="pep1">
                 <h1>Animation is not a genre, but the act of making in inanimate object move.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas, non minima, ea facilis temporibus voluptates consectetur officiis, ullam molestias incidunt recusandae officia consequuntur eum laudantium eos eveniet perferendis sint labore.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas, non minima, </p>
                 <button>DISCOVER MORE</button>
             </div>
             <div class="pep2">
@@ -85,37 +85,36 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi aperiam autem sed voluptatem</p>
                         <button>GET STARTED</button>
                     </div>
-                
-                <div class="box2">
+                 <div class="box2">
                     <img src="./image/image11.png" alt="image10">
                     <h3>2D ANIMATION</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi aperiam autem sed voluptatem</p>
                     <button>GET STARTED</button>
-                </div>
-                <div class="box3">
+                 </div>
+                 <div class="box3">
                     <img src="./image/image12.png" alt="image11">
                     <h3>BRANDED AND DIGITAL BRANDED</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi aperiam autem sed voluptatem</p>
                     <button>GET STARTED</button>
-                </div>
-                <div class="box4">
+                 </div>
+                 <div class="box4">
                     <img src="./image/image13.png" alt="image12">
                     <h3>Ads VIDEO ANIMATIONS</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi aperiam autem sed voluptatem</p>
                     <button>GET STARTED</button>
-                </div>
-                <div class="box5">
+                 </div>
+                 <div class="box5">
                     <img src="./image/image14.png" alt="image13">
                     <h3>PRODUCTION FOR AGENCIES</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi aperiam autem sed voluptatem</p>
                     <button>GET STARTED</button>
-                </div>
-                <div class="box6">
+                 </div>
+                 <div class="box6">
                     <img src="./image/image15.png" alt="image14">
                     <h3>MOVIES</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi aperiam autem sed voluptatem</p>
                     <button>GET STARTED</button>
-                </div>
+                 </div>
              </div>
         </section>
         <section class="chapter4">
@@ -174,9 +173,11 @@
             </div>
         </section>
         <section class="chapter6">
-            <h1>MAHE THE WOELD A BETTER PLACE WITH ANIMATION.</h1>
+            <div class="solo">
+            <h1>MAKE THE WORLD A BETTER PLACE WITH ANIMATION.</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, voluptatem cumque tempore autem quisquam facere. Omnis </p>
             <button>DISCOVER MORE</button>
+            </div>
             <div class="suarez">
                 <div class="suarez1">
                     <img src="./image/image25.png" alt="image25">
@@ -199,7 +200,9 @@
             </div>
         </section>
         <section class="chapter7">
+            <div class="moyo">
             <img src="./image/image30.jpeg" alt="image30">
+            </div>
             <div class="drogba">
                 <h5>TESTIMONIAL</h5>
                 <h1>What rhey say about us</h1>
